# oracle

./: Cargo.toml
candlestick_oracle/: Cargo.toml  candlestick_data.json  index.html
candlestick_oracle/src/: main.rs
uniswap_v2/: Cargo.toml
uniswap_v2/src/: main.rs
uniswap_v3/: Cargo.toml
uniswap_v3/src/: main.rs
