[package]
name = "candlestick_oracle"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "1.0.1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
